apps/homeassistant/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: halo
spec:
  selector:
    app: homeassistant
  ports:
  - protocol: TCP
    port: 8123
    targetPort: 8123

---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-ext-ip
  namespace: halo
  annotations:
     metallb.universe.tf/loadBalancerIPs: "192.168.8.36"
spec:
  selector:
    app: homeassistant
  ports:
  - protocol: TCP
    port: 8123
    targetPort: 8123
  type: LoadBalancer
