apps/homeassistant/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
  namespace: halo
spec:
  ingressClassName: nginx # Specify the Traefik ingress class explicitly
  rules:
    - host: homeassistant.halo.fabseit.net # Match the host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant # Backend service name
                port:
                  number: 8123 # Backend service port
  tls:
    - hosts:
        - homeassistant.halo.fabseit.net # TLS will apply to this host
